# marketplace-website

./: .env.template  .gitignore  Dockerfile  README.md  db.json  docker-compose.yaml  pyproject.toml  requirements.txt  start_prod.sh
django_marketplace/: queries.sql  requirements.txt
django_marketplace/adminpanel/: services.py  views.py
django_marketplace/adminpanel/admin/: __init__.py  configadmin.py  sliderbanneradmin.py  staticbanneradmin.py
django_marketplace/adminpanel/models/: __init__.py  staticbanner.py
django_marketplace/carts/: admin.py  models.py  pydentic_models.py  serializers.py  urls.py  utils.py  views.py
django_marketplace/carts/templatetags/: carts_tags.py
django_marketplace/comparisons/: context_processors.py  urls.py  views.py
django_marketplace/core/: __init__.py  celery.py  custom_querysets.py  settings.py  task.py  urls.py
django_marketplace/fixtures/: products_Category.json  products_Feature.json  products_Product.json  products_ProductFeature.json  products_ProductImage.json  products_Seller.json  products_SellerPrice.json  users_User.json
django_marketplace/orders/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
django_marketplace/products/: banner_services.py  context_processors.py  forms.py  index_services.py  models.py  translation.py  urls.py  views.py
django_marketplace/templates/: base.html  footer.html  footer_about.html  header.html  index.html
django_marketplace/users/: forms.py  models.py  urls.py
gajdenv/: pyvenv.cfg
gajdenv/Scripts/: activate  activate.bat
nginx/: Dockerfile  nginx.conf
(+147 files in other folders)
