[tool.poetry]
name = "django-diploma"
version = "0.1.0"
description = ""
authors = ["Пользователь <sashasergeevasus345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
amqp = "5.2.0"
annotated-types = "0.7.0"
asgiref = "3.8.1"
async-timeout = "4.0.3"
billiard = "4.2.0"
celery = "5.4.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
django = "5.1"
django-cleanup = "8.1.0"
django-constance = "4.1.2"
django-debug-toolbar = "4.4.6"
django-js-asset = "2.2.0"
django-modeltranslation = "0.19.9"
django-mptt = "0.16.0"
djangorestframework = "3.15.2"
idna = "3.10"
kombu = "5.4.1"
pillow = "10.4.0"
prompt-toolkit = "3.0.47"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
redis = "5.0.8"
requests = "2.32.3"
six = "1.16.0"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
vine = "5.1.0"
wcwidth = "0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
